Impersonate client
